KubernetesTest-main/apps/servicey/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: servicey-jwt
  namespace: servicey
spec:
  selector:
    matchLabels:
      app: servicey
  rules:
  - from:
    - source:
        requestPrincipals: ["testing@secure.istio.io/*"]
